add email verification api
